add user egistering service (temp)

--- a/WebContent/WEB-INF/register.html
+++ b/WebContent/WEB-INF/register.html
@@ -71,8 +71,7 @@
 			</form>
 
 		</div> <!-- /container -->
-		<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-		<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+		<script src="resources/js/jquery-2.1.4.min.js"></script>
 		<!-- Form validation script -->
 		<script src="resources/js/validation.js"></script>
     </body>
