--- a/WebContent/WEB-INF/register.html
+++ b/WebContent/WEB-INF/register.html
@@ -33,7 +33,7 @@
     <body>
 
 		<div class="container">
-			<form class="form-signin" action="#" th:action="@{/register}" th:object="${userInfo}" method="post">
+			<form class="form-signin" action="#" th:action="@{/register}" th:object="${userRegisterRequest}" method="post">
 				<h2 class="form-signin-heading">Please sign up</h2>
 				<div class="form-group">
 					<label for="formFirstName" class="sr-only">First Name</label>
@@ -60,28 +60,36 @@
 				</div>
 
 				<div class="form-group">
-					<label for="formEmail" class="sr-only">Phone Number</label>
+					<label for="formEmail" class="sr-only">Email Address</label>
 					<input type="email" name="Email" id="formEmail" placeholder="email" class="form-control" aria-describedby=""/>
 					<span class="glyphicon form-control-feedback" aria-hidden="true"></span>
 					<span id="EmailSuccess2Status" class="sr-only">(success)</span>
-					<span id="EmailNumberError2Status" class="sr-only">(error)</span>
+					<span id="EmailError2Status" class="sr-only">(error)</span>
 				</div>
 
 				<div class="form-group">
-					<label for="formEmail" class="sr-only">Phone Number</label>
-					<input type="email" name="Email" id="formConfirmedEmail" placeholder="email" th:field="*{email}" class="form-control" aria-describedby=""/>
+					<label for="formConfirmedEmail" class="sr-only">Email Address Confirm</label>
+					<input type="text" name="ConfirmEmail" id="formConfirmedEmail" placeholder="email" th:field="*{email}" class="form-control" aria-describedby=""/>
 					<span class="glyphicon form-control-feedback" aria-hidden="true"></span>
 					<span id="ConfirmedEmailSuccess2Status" class="sr-only">(success)</span>
-					<span id="ConfirmedEmailNumberError2Status" class="sr-only">(error)</span>
+					<span id="ConfirmedEmailError2Status" class="sr-only">(error)</span>
 				</div>
 
 				<!-- TODO: real time validation (promises) / check if user name is taken-->
 				<div class="form-group">
-					<input type="text" placeholder="Username" th:field="*{user.username}" class="form-control"/>
+					<label for="formUserName" class="sr-only">User Name</label>
+					<input type="text" name="userName" id="formUserName"  placeholder="Username" th:field="*{userName}" class="form-control" aria-describedby=""/>
+					<span class="glyphicon form-control-feedback" aria-hidden="true"></span>
+					<span id="UserNameSuccess2Status" class="sr-only">(success)</span>
+					<span id="UserNameError2Status" class="sr-only">(error)</span>
 				</div>
 				<!-- TODO: provide strong password-->
 				<div class="form-group">
-					<input type="password" placeholder="Password" th:field="*{user.password}" class="form-control"/>
+					<label for="formPassword" class="sr-only">Password</label>
+					<input type="password" name="password" id="formPassword" placeholder="Password" th:field="*{password}" class="form-control" aria-describedby="">
+					<span class="glyphicon form-control-feedback" aria-hidden="true"></span>
+					<span id="PasswordSuccess2Status" class="sr-only">(success)</span>
+					<span id="PasswordError2Status" class="sr-only">(error)</span>
 				</div>
 				<input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
 				<div class="checkbox">
