add save receipt app

--- a/WebContent/WEB-INF/resources/forms/updateForm.html
+++ b/WebContent/WEB-INF/resources/forms/updateForm.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<form:form id="update-form" name="form" method="post" action="addCube" commandName="cube" target="_self" onsubmit="return validateForm(this)">
+<form:form id="update-form" name="form" method="post" action="addCube" commandName="cubeDO" target="_self" onsubmit="return validateForm(this)">
 	<h1>Update Cube</h1>
 	<h2>Cube ID</h2><form:input path="cube_id" id="cube_id"/>
 	<p>Occupy status:</p>
