add save receipt app

--- a/WebContent/WEB-INF/resources/forms/updateForm.html
+++ b/WebContent/WEB-INF/resources/forms/updateForm.html
@@ -21,7 +21,7 @@
           <form:hidden path="width" id="cube_width" readonly="true"/>
           <form:hidden path="height" id="cube_height" readonly="true"/>
           <p>Employee Name:</p><form:input path="employee_name"/>
-          <p>Team Leader:</p><form:input path="team_leader"/>
+          <p>Team Leader:</p><form:input path="teamLeader"/>
           <p>Phone number:</p><form:input path="phone"/>
           <p>Software Request:</p><form:textarea path="software" rows="5" cols="30" />
           <p>New Hire Check-list :</p><hr>
