--- a/myreceipt-war/src/main/webapp/WEB-INF/resources/html/register.html
+++ b/myreceipt-war/src/main/webapp/WEB-INF/resources/html/register.html
@@ -57,55 +57,40 @@
 		<div class="container">
 			<form class="form-signin" action="#" th:action="@{/register}" th:object="${userRegisterRequest}" method="post">
 				<h2 class="form-signin-heading">Please sign up</h2>
-				<div class="form-group" data-toggle="popover" data-content="">
+				<div class="form-group">
 					<label for="first-name-inp" class="sr-only">First Name</label>
 					<input type="text" name="firstName" id="first-name-inp" placeholder="First Name" th:field="*{firstName}" class="form-control" aria-describedby=""/>
 				</div>
 
-				<div class="form-group" data-toggle="popover" data-content="">
+				<div class="form-group">
 					<label for="last-name-inp" class="sr-only">Last Name</label>
 					<input type="text" name="lastName" id="last-name-inp" placeholder="Last Name" th:field="*{lastName}" class="form-control" aria-describedby=""/>
 				</div>
 
 				<div class="form-group">
-					<label for="formPhoneNumber" class="sr-only">Phone Number</label>
-					<input type="tel" name="phoneNumber" id="formPhoneNumber" placeholder="(555) 555-1212" th:field="*{phoneNumber}" class="form-control" aria-describedby=""/>
+					<label for="phone-number-inp" class="sr-only">Phone Number</label>
+					<input type="tel" name="phoneNumber" id="phone-number-inp" placeholder="(555) 555-1212" th:field="*{phoneNumber}" class="form-control" aria-describedby=""/>
 					<span class="glyphicon form-control-feedback" aria-hidden="true"></span>
-					<span id="PhoneNumberSuccess2Status" class="sr-only">(success)</span>
-					<span id="PhoneNumberError2Status" class="sr-only">(error)</span>
 				</div>
 
 				<div class="form-group">
-					<label for="formEmail" class="sr-only">Email Address</label>
-					<input type="email" name="Email" id="formEmail" placeholder="email" class="form-control" aria-describedby=""/>
-					<span class="glyphicon form-control-feedback" aria-hidden="true"></span>
-					<span id="EmailSuccess2Status" class="sr-only">(success)</span>
-					<span id="EmailError2Status" class="sr-only">(error)</span>
+					<label for="email-inp" class="sr-only">Email Address</label>
+					<input type="email" name="Email" id="email-inp" placeholder="email" class="form-control" aria-describedby=""/>
 				</div>
 
 				<div class="form-group">
-					<label for="formConfirmedEmail" class="sr-only">Email Address Confirm</label>
-					<input type="text" name="ConfirmEmail" id="formConfirmedEmail" placeholder="email" th:field="*{email}" class="form-control" aria-describedby=""/>
-					<span class="glyphicon form-control-feedback" aria-hidden="true"></span>
-					<span id="ConfirmedEmailSuccess2Status" class="sr-only">(success)</span>
-					<span id="ConfirmedEmailError2Status" class="sr-only">(error)</span>
+					<label for="email-confirm-inp" class="sr-only">Email Address Confirm</label>
+					<input type="text" name="ConfirmEmail" id="email-confirm-inp" placeholder="email" th:field="*{email}" class="form-control" aria-describedby=""/>
 				</div>
 
 				<!-- TODO: real time validation (promises) / check if usersDO name is taken-->
 				<div class="form-group">
-					<label for="formUserName" class="sr-only">User Name</label>
-					<input type="text" name="userName" id="formUserName"  placeholder="Username" th:field="*{userName}" class="form-control" aria-describedby=""/>
-					<span class="glyphicon form-control-feedback" aria-hidden="true"></span>
-					<span id="UserNameSuccess2Status" class="sr-only">(success)</span>
-					<span id="UserNameError2Status" class="sr-only">(error)</span>
+					<label for="user-name-inp" class="sr-only">User Name</label>
+					<input type="text" name="userName" id="user-name-inp" placeholder="Username" th:field="*{userName}" class="form-control" aria-describedby=""/>
 				</div>
-				<!-- TODO: provide strong password-->
 				<div class="form-group">
-					<label for="formPassword" class="sr-only">Password</label>
-					<input type="password" name="password" id="formPassword" placeholder="Password" th:field="*{password}" class="form-control" aria-describedby="">
-					<span class="glyphicon form-control-feedback" aria-hidden="true"></span>
-					<span id="PasswordSuccess2Status" class="sr-only">(success)</span>
-					<span id="PasswordError2Status" class="sr-only">(error)</span>
+					<label for="password-inp" class="sr-only">Password</label>
+					<input type="password" name="password" id="password-inp" placeholder="Password" th:field="*{password}" class="form-control" aria-describedby="">
 				</div>
 				<input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
 				<div class="checkbox">
