enhance ocr / bugs fixed

--- a/myreceipt-war/src/main/webapp/WEB-INF/angular/angular.html
+++ b/myreceipt-war/src/main/webapp/WEB-INF/angular/angular.html
@@ -30,7 +30,7 @@
 <div ng-controller="MyController" class="container" id="controllerDivId">
     <div class="jumbotron">
         <h1>My Receipt</h1>
-        <p>This place will soon to be a ultimate form to send place info to server and store the place id with user id, plus any info related to it. Happy receipting</p>
+        <p>Happy receipting</p>
     </div>
     <div class="page-header">
         <h1>DRAFT</h1>
