--- a/myreceipt-war/src/main/webapp/WEB-INF/angular/index.html
+++ b/myreceipt-war/src/main/webapp/WEB-INF/angular/index.html
@@ -69,7 +69,7 @@
 </nav>
 <div class="container" id="controllerDivId">
     <div class="jumbotron">
-        <p>This place will soon to be a ultimate form to send place info to server and store the place id with usersDO id, plus any info related to it. Happy receipting</p>
+        <p>Happy receipting</p>
     </div>
     <div class="page-header">
         <h3>Draft version only</h3>
